[gd_scene load_steps=14 format=3 uid="uid://df3186n7hcpy4"]

[ext_resource type="Texture2D" uid="uid://c4crcxhc0xxat" path="res://Enemies/Ice Mimic/Ice Mimic Idle.png" id="1_20480"]
[ext_resource type="Script" uid="uid://c188mfxcltt5p" path="res://Enemies/Ice Mimic/ice_mimic.gd" id="1_o6oqm"]
[ext_resource type="Texture2D" uid="uid://67fl60v3t110" path="res://Enemies/Ice Mimic/Ice Mimic Attack.png" id="2_1j4ak"]
[ext_resource type="PackedScene" uid="uid://ddoxp44fjesk0" path="res://Bars/Health_bar.tscn" id="4_6y81t"]
[ext_resource type="PackedScene" uid="uid://dh5638o8nsc3t" path="res://Bars/Mana_bar.tscn" id="5_d7tnq"]
[ext_resource type="Script" uid="uid://m2rhk5o07s62" path="res://Enemies/Rat/hitbox.gd" id="6_hey2c"]

[sub_resource type="Animation" id="Animation_o6oqm"]
resource_name = "Attack"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAttack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_6y81t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAttack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d7tnq"]
_data = {
&"Attack": SubResource("Animation_o6oqm"),
&"RESET": SubResource("Animation_6y81t")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iehyo"]
size = Vector2(38, 31)

[sub_resource type="CircleShape2D" id="CircleShape2D_ahxem"]
radius = 186.024

[sub_resource type="CircleShape2D" id="CircleShape2D_3w852"]
radius = 27.0185

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hkn71"]
radius = 13.3167
height = 27.3344

[node name="Ice Mimic" type="CharacterBody2D"]
script = ExtResource("1_o6oqm")

[node name="SpriteIdle" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_20480")

[node name="SpriteAttack" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_1j4ak")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d7tnq")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9.5)
shape = SubResource("RectangleShape2D_iehyo")

[node name="DetectionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_ahxem")

[node name="HurtBox" type="Area2D" parent="."]
disable_mode = 2
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_3w852")

[node name="HealthBar" parent="." instance=ExtResource("4_6y81t")]
visible = false
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -24.0
offset_top = -13.0
offset_right = 99.0
offset_bottom = 19.0
grow_horizontal = 1
grow_vertical = 1

[node name="ManaBar" parent="." instance=ExtResource("5_d7tnq")]
visible = false
offset_left = -65.0
offset_top = 42.0
offset_right = 73.0
offset_bottom = 69.0

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("6_hey2c")
metadata/_custom_type_script = "uid://pjr6b0dw2pam"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2(0, 9)
scale = Vector2(2.85355, 1.05604)
shape = SubResource("CapsuleShape2D_hkn71")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.617

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="health_changed" from="." to="HealthBar" method="_on_ice_mimic_health_changed"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
